--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "~TODO~",
+  "name": "DSK",
+  "author": "Gilbert Sinnott",
+  "description": "media player",
   "version": "0.0.1",
   "scripts": {
-    "dev": "svelte-kit --host 0.0.0.0 dev & node-sass src/global.sass static/global.css -w",
+    "dev": "svelte-kit --host 0.0.0.0 dev & node-sass src/global.sass static/global.css -w & nodemon static/buttons.js",
     "build": "svelte-kit build",
-    "start": "svelte-kit start"
+    "start": "svelte-kit start & node static/buttons.js"
   },
   "devDependencies": {
     "@sveltejs/adapter-node": "next",
@@ -16,6 +18,9 @@
   },
   "type": "module",
   "dependencies": {
-    "@lukeed/uuid": "^2.0.0"
+    "@lukeed/uuid": "^2.0.0",
+    "http": "^0.0.1-security",
+    "rpi-gpio-buttons": "^2.0.1",
+    "ws": "^7.4.5"
   }
 }
